<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NedoChat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear">Clear</string>

    <string name="title">(Android Test Chat App)</string>
    <string name="author_name">By Dmytro Kataryna</string>
    <string name="author_url">Kataryna.Dmytro@gmail.com</string>
    <string name="enter_name">Enter your name</string>
    <string name="btn_join">JOIN</string>
    <string name="btn_send">Send</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="Logout">Logout</string>
    <string name="delete_DB">Erase DB</string>
    <string name="desc">Start application logo</string>

</resources>
